--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -546,6 +546,300 @@
    "source": [
     "print(decode(m.generate(torch.zeros((1, 1), dtype=torch.long), max_new_tokens=100)[0].tolist()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,2\n",
+    "x = torch.randn(B,T,C)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xbow = torch.zeros((B,T,C))\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b,:t+1]\n",
+    "        xbow[b,t] = torch.mean(xprev, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 2\n",
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / torch.sum(wei, 1, keepdim=True)\n",
+    "xbow2 = wei @ x\n",
+    "torch.allclose(xbow, xbow2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 3: softmax\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "xbow3 = wei @ x\n",
+    "torch.allclose(xbow, xbow3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 16])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 4: self attention\n",
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,32\n",
+    "x = torch.randn(B,T,C)\n",
+    "\n",
+    "# single head self attention\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
+    "k = key(x) # (B, T, head_size)\n",
+    "q = query(x) # (B, T, head_size)\n",
+    "wei = q @ k.transpose(-2, -1) # (B, T, 16) @ (B, 16, T) -> (B, T, T)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "\n",
+    "v = value(x)\n",
+    "out = wei @ v\n",
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.0966) tensor(0.9416) tensor(1.0065)\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = torch.randn(B, T, head_size)\n",
+    "q = torch.randn(B, T, head_size)\n",
+    "wei = q @ k.transpose(-2, -1) * head_size ** -0.5\n",
+    "print(k.var(), q.var(), wei.var())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1925, 0.1426, 0.2351, 0.1426, 0.2872])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]), dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0326, 0.0030, 0.1615, 0.0030, 0.8000])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5])*8, dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.3596, -0.9152],\n",
+       "        [ 0.6258,  0.0255],\n",
+       "        [ 0.9545,  0.0643],\n",
+       "        [ 0.3612,  1.1679],\n",
+       "        [-1.3499, -0.5102],\n",
+       "        [ 0.2360, -0.2398],\n",
+       "        [-0.9211,  1.5433]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0.],\n",
+       "        [1., 1., 0.],\n",
+       "        [1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tril(torch.ones(3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000],\n",
+      "        [0.5000, 0.5000, 0.0000],\n",
+      "        [0.3333, 0.3333, 0.3333]])\n",
+      "tensor([[2., 7.],\n",
+      "        [6., 4.],\n",
+      "        [6., 5.]])\n",
+      "tensor([[2.0000, 7.0000],\n",
+      "        [4.0000, 5.5000],\n",
+      "        [4.6667, 5.3333]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "a = torch.tril(torch.ones(3, 3))\n",
+    "a = a / torch.sum(a, 1, keepdim=True)\n",
+    "b = torch.randint(0, 10, (3, 2)).float()\n",
+    "c = a @ b\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
